# congress-tui

./: .gitignore  README.md  pyproject.toml  serve.toml
src/: congress-tui.py  congress-tui.tcss
