[tool.poetry]
name = "congress-tui"
version = "0.1.0"
description = "TUI to browse US government bills"
authors = ["Bill McKinney <mckinney.sw@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
congress-tui = "src.congress-tui:main"

[tool.poetry.dependencies]
python = "^3.8"
textual = "^0.40.0"
textual-dev = "^1.2.1"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
